Mon Apr 23 11:30:56 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* api/maptermlist.h: Fix typo in error message.

Mon Apr 23 11:08:01 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* api/maptermlist.h: Throw an InvalidOperationError() if
	  MapTermList::get_termfreq() is called, instead of simply having
	  Assert(false): this gets called if a term iterator is accessed
	  for a freshly created Document, and the get_termfreq() method is
	  called on it.  The error message is specific to this situation,
	  since this is the only place in which MapTermList is used.

Mon Apr 23 03:22:54 BST 2007  Olly Betts <olly@survex.com>

	* backends/flint/flint_database.cc,backends/flint/flint_lock.cc,
	  backends/flint/flint_lock.h: Report why we failed to get a write
	  lock on a flint database.

Mon Apr 23 01:44:13 BST 2007  Olly Betts <olly@survex.com>

	* backends/flint/flint_version.cc: Update the flint format version
	  since older flint versions can't read compressed tags.

Mon Apr 23 01:25:25 BST 2007  Olly Betts <olly@survex.com>

	* configure.ac: Probe for zlib.h and -lz.
	* backends/flint/,bin/xapian-compact.cc: Use zlib to compress tags
	  in the record and termlist tables.
	* tests/Makefile.am,tests/runtest.in,tests/valgrind.supp: Add a
	  valgrind suppression for zlib (a known issue - for speed zlib
	  deliberately reads past the end of the buffer in some cases).

Sun Apr 22 04:24:06 BST 2007  Olly Betts <olly@survex.com>

	* backends/flint/: Remove documentation for blocksize_ parameters
	  which were removed some time ago.

Sun Apr 22 00:02:13 BST 2007  Olly Betts <olly@survex.com>

	* matcher/multimatch.cc: Track the minimum weight required to be
	  considered for the MSet separately from the minimum item which
	  could be considered.  Trying to combine the two is causing subtle
	  bugs (fixed bug#86).

Sun Apr 22 00:00:39 BST 2007  Olly Betts <olly@survex.com>

	* HACKING: Add notes about the files Omega uses from xapian-core.
